kubernetes/manifests/apps/vaultwarden/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vaultwarden
  namespace: vaultwarden

spec:
  replicas: 1

  selector:
    matchLabels:
      app: vaultwarden

  template:
    metadata:
      labels:
        app: vaultwarden

    spec:
      containers:
        - name: vaultwarden

          image: vaultwarden/server:1.34.3
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 80
              name: http

          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 20

          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10

          volumeMounts:
          - name: vaultwarden-data
            mountPath: /data

      volumes:
        - name: vaultwarden-data
          persistentVolumeClaim:
            claimName: vaultwarden-data
