kubernetes/manifests/apps/vaultwarden/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: vaultwarden
  namespace: vaultwarden

spec:
  selector:
    app: vaultwarden

  ports:
    - name: http
      port: 80
      targetPort: http
